updated offset on line 32

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
         <div>
             <div class="container">
-                <!--padding left-->
-                <div class="col-md-2"></div>
-                <div class="col-md-6">
+                <!--padding left(you can do the same thing with offset-->
+                <!-- <div class="col-md-2"></div> -->
+                <div class="col-md-6 offset-md-2">
                     RPC exists to learn how to build projects using a Raspberry Pi computer. 
                     We want to build projects that help us learn to work as a team, communicate well, 
                     solve unique problems, and take initiative. We recognize that these are qualities that are 
