--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             
     </head>
     <body>
+        <!--Navigation Bar-->
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">SLCC RPC</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Docs</a></li>
+                    <li><a href="#">Files</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </nav>
+        
         <div class="container">
             <div class="jumbotron">
                 <h1>SLCC RPC</h1>
