--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>SLCC RPC</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -61,8 +62,8 @@
 
         <div class="container">
             <div class="jumbotron">
-                <h1>SLCC RPC</h1>
-                <p>Salt Lake Community College Raspberry Pi Club</p>
+                <h1 class="text-center">SLCC RPC</h1>
+                <p class="text-center">Salt Lake Community College Raspberry Pi Club</p>
             </div>
         </div>
         <div>
